log
Thu, Mar 27, 2025  7:29:58 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:20: error: statement with no effect [-Werror=unused-value]
     newlista->data == NULL;
                    ^
list.c:34:20: error: statement with no effect [-Werror=unused-value]
     newlista->next == NULL;
                    ^
list.c:35:20: error: statement with no effect [-Werror=unused-value]
     newlista->prev == NULL;
                    ^
list.c:36:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return newlista;
            ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Thu, Mar 27, 2025  7:31:07 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:36:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return newlista;
            ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a48663e
Thu, Mar 27, 2025  7:32:01 PM: 
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:37:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return newlista;
            ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
20c1136
Thu, Mar 27, 2025  7:33:03 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
0bdc457
